<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">BlackCard</string>
    <string name="no_internet">无网络连接</string>
    <string name="generic_server_down">连接服务器失败</string>
    <string name="generic_error">网络异常,请稍后再试</string>
    <string name="drawer_close">关</string>
    <string name="drawer_open">开</string>

    <string name="comment_temp">#之前就来过这里，环境很不错，作为我来讲对这种牛排其实是一点都不感冒[撇嘴]，朋友的盛情邀请实在是不好意思拒绝，索性就来瞧瞧，不来不知道，吃过之后给我留下不错的印象，这次来也是带几个朋友来，给他们各种吹嘘这里的好东西多好之类的！！还好吃过之后大家都没有失望的表情。。。总之以后回多多光临的，页希望大家来哦</string>
    <string name="sys_msg_temp">最后6小时，百强之争谁能晋级？抓紧时助力你喜爱的女主播冲刺晋级，登台黑卡之夜盛典，与巨星同台</string>


    <string name="recent">刚刚</string>
    <string name="minutes_ago">&#160;分钟前</string>
    <string name="hours_ago">&#160;小时前</string>
    <string name="day_ago">&#160;天前</string>
    <string name="year_ago">&#160;年前</string>

    <string name="user_id">账号:</string>
    <string name="user_name">名字:</string>
    <string name="quality_options">直播品质:</string>
    <string name="sdk_version">SDK:</string>
    <string name="upload_log">上传日志</string>
    <string name="contact_us">联系我们</string>
    <string name="about">关于</string>
    <string name="demo_version">版本:&#160;</string>
    <string name="upload_log_successfully">日志上传成功</string>

    <string name="resolution_prefix">分辨率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="fps_prefix">帧率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="bitrate_prefix">码率&#160;<xliff:g id="value">%1$s</xliff:g></string>

    <string name="app_loading_more">加载中…</string>
    <string name="app_no_more_data">没有更多数据了…</string>
    <string name="live_count"><xliff:g id="value">%1$s</xliff:g>个人在连麦</string>
    <string name="log">日志</string>
    <string name="zego">ZEGO</string>
    <string name="advanced">高级</string>
    <string name="hint_pull_refresh">下拉刷新^_^</string>

    <string name="textOn">开启</string>
    <string name="textOff">关闭</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="publish_setting">设置</string>
    <string name="make_a_title">给直播取一个吸引人的标题</string>
    <string name="go_publish">开始直播</string>
    <string name="test_env">测试环境</string>
    <string name="app_flavor">App版本</string>
    <string name="appid">AppID:</string>
    <string name="appkey">AppKEY:</string>
    <string name="mute">静音</string>
    <string name="front_camera">前置摄像头</string>
    <string name="camera">开启摄像头</string>
    <string name="speaker">声音</string>
    <string name="mic">麦克风</string>
    <string name="flashlight">手电筒</string>
    <string name="background_music">伴奏</string>
    <string name="loopback">采集监听</string>
    <string name="mixengine_playout">合唱</string>
    <string name="beauty">美颜</string>
    <string name="filter">滤镜</string>
    <string name="start_publishing">开始直播</string>
    <string name="request_to_join">请求连麦</string>
    <string name="stop_publishing">停止直播</string>

    <!--broadcast-->
    <string name="hint">提示</string>
    <string name="someone_is_requesting_to_broadcast_allow"><xliff:g id="value">%1$s</xliff:g>&#160;正在请求连麦, 是否同意?"</string>
    <string name="Allow">同意</string>
    <string name="Deny">拒绝</string>
    <string name="your_request_has_been_denied">你的连麦请求被拒绝</string>
    <string name="got_it">知道了</string>
    <string name="do_you_really_want_to_leave">确定要退出直播页面吗</string>
    <string name="Yes">确定</string>
    <string name="No">取消</string>

    <!--log-->
    <string name="someone_is_requesting_to_broadcast"><xliff:g id="value">%1$s</xliff:g>:&#160;正在请求连麦</string>
    <string name="request_of_broadcast_has_been_allowed"><xliff:g id="value">%1$s</xliff:g>:&#160;连麦请求被通过</string>
    <string name="request_of_broadcast_has_been_denied"><xliff:g id="value">%1$s</xliff:g>:&#160;连麦请求被拒绝</string>
    <string name="please_wait">请稍后...</string>

    <string name="live_quality">当前质量:&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="live_quality_fps_and_bitrate">;&#160;帧率:<xliff:g id="fps">%1$.2f</xliff:g>;&#160;比特率:<xliff:g id="bitrate">%2$.2f</xliff:g>Kb/s</string>
    <string name="full_screen">全屏播放</string>
    <string name="exit_full_screen">退出全屏</string>
    <string name="allow_camera_permission">请开启摄像头权限</string>
    <string name="open_recorder_permission">请开启录音权限</string>
    <string name="share">分享</string>
    <string name="cancel">取消</string>
    <string name="mix_stream_mode">混流模式</string>
    <string name="more_anchors_mode">连麦模式</string>
    <string name="single_anchor_mode">单主播模式</string>
    <string name="game_live_mode">游戏直播</string>
    <string name="play_mixstream">播放混流</string>
    <string name="wolves_game_mode">狼人杀</string>
    <string name="start_aux_publish">推第二路流</string>
    <string name="stop_aux_publish">停止推第二路流</string>

    <string name="external_capture">外部采集</string>
    <string name="external_render">外部渲染</string>
    <string name="external_filter">外部滤镜</string>
    <string name="hardware_encode">硬件编码</string>
    <string name="hardware_decode">硬件解码</string>
    <string name="rate_control">码率控制</string>
    <string name="preview_mirror">预览镜像</string>
    <string name="capture_mirror">采集镜像</string>

    <string name="message_can_not_be_empty">消息不能为空!</string>
    <string name="me">我</string>

    <string name="start_speaking">开始说话</string>
    <string name="end_speaking">结束说话</string>
    <string name="is_speaking">正在说话</string>
    <string name="in_turn">轮流说话</string>
    <string name="end_in_turn">结束轮流说话</string>
    <string name="mode_free_speaking">当前模式：自由说话</string>
    <string name="mode_in_turn_speaking">当前模式：轮流说话</string>
    <string name="mode_in_turn_speaking_wait">当前模式：轮流说话（正在游戏，等待下一局）</string>
    <string name="mode_updating_system">正在系统同步...</string>
    <string name="mode_update_system_success">系统同步成功</string>
    <string name="mode_update_system_failed">系统同步失败</string>

    <string name="publish_way_title">选择推流方式</string>
    <string name="publish_way_low_delay">低延迟</string>
    <string name="publish_way_low_cost">低成本</string>

    <string name="wolf_role">角色: %1$d</string>
    <string name="tips_login_success">登录房间成功</string>
    <string name="tips_login_failed" formatted="true">登录房间失败：%1$d</string>
    <string name="tips_wait_anchor_answer">等待主持人响应</string>
    <string name="dialog_anchor_leave_room">主持人已离开房间</string>
    <string name="tips_all_members_leave">所有玩家都退出了</string>
    <string name="tips_publish_failed">发布直播失败，errorCode: %1$d, streamId: %2$s</string>
    <string name="tips_publish_finish">发布直播结束，errorCode: %1$d, streamId: %2$s</string>
    <string name="tips_publish_stop">推流终止</string>
    <string name="tips_over_max_play_channle_count">超出房间人数容纳上限</string>


    //背景音乐，耳返
    <string name="no_music">无音乐</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="stop">停止</string>
    <string name="start">开始</string>
    <string name="close_loop">关循环</string>
    <string name="open_loop">开循环</string>
    <string name="close_mute">关静音</string>
    <string name="open_mute">开静音</string>
    <string name="close_ears_back">关耳返</string>
    <string name="open_ears_back">开耳返</string>
    <string name="close_audio_denoise">关降噪</string>
    <string name="open_audio_denoise">开降噪</string>
    <string name="accompaniment">伴奏</string>
    <string name="voice">人声</string>
    <string name="internet_music">网络音乐</string>

    <string name="tip_drag">长按编辑,拖拽排序</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">其他频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
</resources>
