<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_black"
            android:orientation="vertical">

            <com.zsh.blackcard.live.zego.ViewLive
                android:id="@+id/vl_big_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:isBigView="true" />


            <LinearLayout
                android:id="@+id/ll_viewlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/base20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />

                    <com.zsh.blackcard.live.zego.ViewLive
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_send"
                android:layout_width="@dimen/base50dp"
                android:layout_height="@dimen/base40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/base5dp"
                android:gravity="center"
                android:text="发送"
                android:textColor="@color/ff92_text"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_msg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/base5dp"
                android:layout_toLeftOf="@id/tv_send"
                android:text="say something"
                android:textColor="@color/ff92_text"
                android:textSize="15sp" />

            <ListView
                android:id="@+id/lv_comments"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_above="@id/et_msg"
                android:layout_marginLeft="5dp"
                android:divider="#00000000">

            </ListView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlyt_control_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llyt_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base50dp"
                android:layout_marginLeft="@dimen/base20dp"
                android:layout_marginRight="@dimen/base10dp"
                android:background="@android:color/transparent">


                <TextView
                    android:id="@+id/tv_log_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/log"
                    android:textColor="@color/ff92_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mute"
                    android:textColor="@color/ff92_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_publish_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/publish_setting"
                    android:textColor="@color/ff92_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_publish_control"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/ff92_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_close"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llyt_header"
                android:layout_marginLeft="@dimen/base5dp"
                android:layout_marginTop="@dimen/base10dp"
                android:textColor="@color/ff92_text"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_play_mixstream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_tag"
                android:layout_below="@id/tv_tag"
                android:text="@string/play_mixstream"
                android:textColor="@color/ff92_text"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_aux_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_tag"
                android:layout_below="@id/tv_play_mixstream"
                android:layout_marginTop="@dimen/base5dp"
                android:text="@string/start_aux_publish"
                android:textColor="@color/ff92_text"
                android:textSize="15sp"
                android:visibility="gone" />

        </RelativeLayout>
    </FrameLayout>

    <!--<com.zego.livedemo5.ui.widgets.PublishSettingsPannel-->
    <!--android:id="@+id/publishSettingsPannel"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="#60ffffff"-->
    <!--android:minHeight="100dp"-->
    <!--app:behavior_hideable="true"-->
    <!--app:behavior_peekHeight="1dp"-->
    <!--app:layout_behavior="@string/bottom_sheet_behavior"-->
    <!--&gt;-->

    <!--</com.zego.livedemo5.ui.widgets.PublishSettingsPannel>-->

</LinearLayout>


